buttons readable, now fix toggle

--- a/static/css/blue.css
+++ b/static/css/blue.css
@@ -54,7 +54,8 @@ a:hover {
 .btn-primary:active,
 .btn-primary.active,
 .btn-primary:visited,
-.btn-primary.btn-outline:active {
+.btn-primary.btn-outline:active,
+.open > .dropdown-toggle.btn-primary {
     background-color: #7f8cb4;
 }
 
